# CycFlow

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
CbfView/: CMakeLists.txt  CbfReader.cpp  CbfReader.h  ChartDefs.h  ChartDelegate.cpp  ChartDelegate.h  ChartHeaderView.cpp  ChartHeaderView.h  ChartModel.cpp  ChartModel.h  ChartView.cpp  ChartView.h  ChartWidget.cpp  ChartWidget.h  DataGenerator.cpp  DataGenerator.h  MainWindow.cpp  MainWindow.h  main.cpp
ChartViewTest/: CMakeLists.txt  DataGenerator.cpp  DataGenerator.h  main.cpp
ChartWidget/: ChartDefs.h  ChartDelegate.cpp  ChartDelegate.h  ChartHeaderView.cpp  ChartHeaderView.h  ChartModel.cpp  ChartModel.h  ChartTheme.cpp  ChartTheme.h  ChartView.cpp  ChartView.h  ChartWidget.cpp  ChartWidget.h
CycBufReceiver/: AppConfig.h  CMakeLists.txt  ChartConsumer.cpp  ChartConsumer.h  ConnectionDialog.cpp  ConnectionDialog.h  MainWindow.cpp  MainWindow.h  TcpSessionWidget.cpp  TcpSessionWidget.h  main.cpp
CycLib/: CMakeLists.txt  CbfDefs.h  CbfReader.cpp  CbfReader.h  CbfWriter.cpp  CircularBuffer.h  Common.cpp  Common.h  CsvWriter.cpp  CsvWriter.h  CycLib_global.h  CycLogger.cpp  CycLogger.h  DynamicChunkBuffer.h  PAttr.cpp  PReg.cpp  PReg.h  RecBuffer.cpp  RecBuffer.h  RecRule.cpp  RecRule.h  Record.cpp  Record.h  RecordConsumer.cpp  RecordConsumer.h  RecordProducer.cpp  RecordProducer.h  RecordReader.cpp  RecordReader.h  RecordWriter.cpp  RecordWriter.h
CycLib/Cbf/: CbfDefs.h  CbfFile.cpp  CbfFile.h  CbfReader.cpp  CbfReader.h  CbfWriter.cpp  CbfWriter.h
CycLib/Core/: CircularBuffer.h  Common.cpp  Common.h  CycLib_global.h  CycLogger.h  DynamicChunkBuffer.cpp  DynamicChunkBuffer.h  IRecBufferClient.h  PAttr.cpp  PAttr.h  PReg.cpp  PReg.h  RecBuffer.cpp  RecBuffer.h  RecRule.cpp  RecRule.h  Record.cpp  Record.h
CycLib/Csv/: CsvWriter.cpp  CsvWriter.h
CycLib/Tcp/: MessageUtils.h  TcpDataReceiver.cpp  TcpDataReceiver.h  TcpDataSender.cpp  TcpDataSender.h  TcpDefs.h  TcpServer.cpp  TcpServer.h  TcpServiceClient.cpp  TcpServiceClient.h
CycTestServer/: CMakeLists.txt  main.cpp
Tests/: CMakeLists.txt  CbfReaderTest.cpp  CbfTest.cpp  CbfWriterTest.cpp  TcpIntegrationTests.cpp  TcpTests.cpp  test_Cbf.cpp  test_Core.cpp  test_Csv.cpp  test_CsvWriter.cpp  test_Tcp.cpp  test_main.cpp
cmake/: CycStructConfig.cmake.in  SetupIcons.cmake  linux_shortcut.desktop.in
docs/: zero-copy-mpmc-buffer-plan.md
resources/: CbfView.qrc  CycBufReceiver.qrc  Icon.qrc  Icon_dark.qrc
